--- a/src/HAI711I_Graphes_Structures/assets/module_header.tex
+++ b/src/HAI711I_Graphes_Structures/assets/module_header.tex
@@ -40,7 +40,7 @@
 
 \counterwithout{tdcounter}{section} 
 
-\usetikzlibrary{shapes,arrows,positioning,calc,fit,backgrounds,angles,quotes}
+\usetikzlibrary{shapes,arrows,positioning,calc,fit,backgrounds,angles,quotes,intersections}
 
 \usepackage{floatrow}
 \usepackage{caption}
